--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp": "^5.0.0",
     "gulp-autoprefixer": "^9.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-changed": "^5.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^3.0.0",
     "gulp-concat": "^2.6.1",
@@ -48,5 +49,8 @@
     "gulp-svgmin": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.79.5"
+  },
+  "dependencies": {
+    "swiper": "^11.1.14"
   }
 }
