--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svgmin": "^4.1.0",
     "gulp-uglify": "^3.0.2",
+    "npm-check-updates": "^17.1.3",
     "sass": "^1.79.5"
   },
   "dependencies": {
